Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2917036 by drunken monkey, borisson_: Fixed illegal return values in
  Database::getAutocompleteSuggestions().
- #2916225 by tilenav, borisson_, drunken monkey: Replaced manual config
  setting with installConfig() in our Kernel tests.
- #2917779 by mkalkbrenner, edurenye, drunken monkey: Fixed fatal errors in
  views on PHP 5.
- #2905562 by drunken monkey, borisson_: Increased the minimum Core version to
  8.4.
- #2905562 by drunken monkey, borisson_: Increased the minimum Core version to
  8.4.
- #2916208 by drunken monkey: Fixed AJAX display of plugin forms.
- #2278433 by drunken monkey, borisson_: Added option to Views field handlers
  to use highlighted fields data.
- #2278433 by drunken monkey, borisson_: Added option to Views field handlers
  to use highlighted fields data.

Search API 1.5 (2017-10-14):
----------------------------
- #2913688 by kevin.dutra, borisson_, drunken monkey: Fixed display plugin for
  Views pages with contextual filters.
- #2911734 by drunken monkey, borisson_, mkalkbrenner: Fixed Views display of
  fields returned from the backend.
- #2910918 by drunken monkey, borisson_: Fixed error in fields configuration
  form.
- #2650986 by drunken monkey, borisson_: Fixed various problems with Views
  field handling.
- #2907518 by drunken monkey, jrockowitz, borisson_: Fixed index
  creation/update via CLI on large sites.
- #2908440 by claudiu.cristea: Fixed UnsavedIndexConfiguration documentation.
- #2899678 by drunken monkey, Graber, borisson_: Added support for VBO.
- #2909153 by drunken monkey, borisson_: Fixed fatal error for test fails under
  certain conditions.
- #2907756 by drunken monkey, bojanz: Fixed "Entity status" processor to
  support other publishable entity types.
- #2904377 by drunken monkey, borisson_: Added Autocomplete tests for the DB
  backend.
- #2907943 by drunken monkey: Fixed warnings on PHP 5.